Modify get projects

--- a/first.html
+++ b/first.html
@@ -9,6 +9,8 @@
 <body>
 		<h1> This is My first git projects</h1>
 		<p> Now i am learning git with interestly</p>
+		<h1> Git Linking Done</h1>
+		<p> This is a awesome system</p>
 
 </body>
 </html>
